--- a/src/sampleProject.vcxproj
+++ b/src/sampleProject.vcxproj
@@ -15,6 +15,8 @@
     <ClCompile Include="bitmapfont\ysglmaketextbitmap.c" />
     <ClCompile Include="bitmapfont\ysglusefontbitmap.c" />
     <ClCompile Include="Matrices.cpp" />
+    <ClCompile Include="MilkshapeModel.cpp" />
+    <ClCompile Include="Model.cpp" />
     <ClCompile Include="transport.cpp" />
     <ClCompile Include="wcode\fswin32keymap.cpp" />
     <ClCompile Include="wcode\fswin32winmain.cpp" />
@@ -24,6 +26,8 @@
     <ClInclude Include="bitmapfont\ysglfontdata.h" />
     <ClInclude Include="fssimplewindow.h" />
     <ClInclude Include="Matrices.h" />
+    <ClInclude Include="MilkshapeModel.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="vector2d.h" />
     <ClInclude Include="vector3d.h" />
     <ClInclude Include="wcode\fswin32keymap.h" />
@@ -37,15 +41,15 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v120</PlatformToolset>
+ <!--   <CharacterSet>Unicode</CharacterSet> -->
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+<!--    <CharacterSet>Unicode</CharacterSet> -->
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -70,13 +74,14 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(SolutionDir)..\src;$(SolutionDir)..\..\ysbitmapfont\src</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glu32.lib;glaux.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Lib>
       <OutputFile>$(SolutionDir)$(Configuration)\$(TargetName)$(TargetExt)</OutputFile>
