--- a/etc/.gitconfig
+++ b/etc/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Reza Nezami
-	email = pavan.sss1991@gmail.com
+	email = arjangcore@gmail.com
 [core]
 	editor = notepad++
 	whitespace = fix,-indent-with-non-tab,trailing-space,cr-at-eol
